@startuml
skinparam linetype ortho
skinparam packageStyle rectangle

package "UI / Presentation Layer" #E8F5E9 {

    package "ui.main" {
        class MainActivity <<View>>
        class MainViewModel <<ViewModel>>
    }

    package "ui.dashboard" {
        class DashboardFragment <<View>>
        class DashboardViewModel <<ViewModel>>
    }

    package "ui.system" {
        class SystemFragment <<View>>
        class SystemViewModel <<ViewModel>>
    }

    package "ui.network" {
        class NetworkFragment <<View>>
        class NetworkViewModel <<ViewModel>>
        class NetworkUiState <<State>>
        NetworkViewModel +-- NetworkUiState
    }

    package "ui.tools" {
        class ToolsFragment <<View>>
        class ToolsViewModel <<ViewModel>>
    }

    ' View-ViewModel relationships
    MainActivity --> MainViewModel
    DashboardFragment --> DashboardViewModel
    SystemFragment --> SystemViewModel
    NetworkFragment --> NetworkViewModel
    ToolsFragment --> ToolsViewModel

    ' Navigation relationship
    MainActivity ..> DashboardFragment : "initially hosts"
}
@enduml
